<resources>
    <string name="app_name">Beba Água!</string>
    <string name="seu_peso">Seu peso (Kg)</string>
    <string name="sua_idade">Sua idade</string>
    <string name="calcular_ingest">CALCULAR INGESTÃO DIÁRIA</string>
    <string name="lembrete">Lembrete</string>
    <string name="alarme">Alarme</string>
    <string name="hora">00</string>
    <string name="minutos">00</string>
    <string name="dois_pontos">:</string>
    <string name="aviso_peso">Digite seu peso :)</string>
    <string name="aviso_idade">Digite sua idade :)</string>
    <string name="beba_gua">Beba Água! :)</string>
    <string name="dialog_redefinir_dados">Redefinir dados</string>
    <string name="dialog_desc">Deeja excluir todos os dados existentes?</string>
    <string name="_0_0_l">0,0 Litros</string>
    <string name="mensagem_alarme">Hora de beber água! :)</string>
</resources>