<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/container_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/bebaagua"
        app:layout_constraintStart_toStartOf="@id/container_header"
        app:layout_constraintTop_toTopOf="@id/container_header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/beba_gua"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/container_header" />

    <ImageView
        android:id="@+id/ic_redefinir"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_refresh_24"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="@id/container_header"
        app:layout_constraintEnd_toEndOf="@id/container_header"/>

    <EditText
        android:id="@+id/editTextPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:inputType="number|numberDecimal"
        android:maxLength="7"
        android:padding="15dp"
        android:hint="@string/seu_peso"
        android:textColorHint="@android:color/holo_blue_light"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_header" />

    <EditText
        android:id="@+id/editTextIdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/sua_idade"
        android:inputType="number"
        android:maxLength="3"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textColorHint="@android:color/holo_blue_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_header" />

    <Button
        android:id="@+id/bt_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/calcular_ingest"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@drawable/bg_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPeso" />

    <View
        android:id="@+id/resultado_ml"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/container_result_ml"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_calcular" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_0_l"
        android:textSize="36sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/resultado_ml"
        app:layout_constraintEnd_toEndOf="@+id/resultado_ml"
        app:layout_constraintStart_toStartOf="@id/resultado_ml"
        app:layout_constraintTop_toTopOf="@id/resultado_ml" />

    <Button
        android:id="@+id/bt_lembrete"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/lembrete"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/text_hora"
        app:layout_constraintTop_toBottomOf="@+id/resultado_ml" />

    <Button
        android:id="@+id/bt_alarme"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/alarme"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/text_minutos"
        app:layout_constraintTop_toBottomOf="@+id/resultado_ml" />

    <TextView
        android:id="@+id/text_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/hora"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_dois_pontos"
        app:layout_constraintTop_toBottomOf="@+id/bt_lembrete" />

    <TextView
        android:id="@+id/text_dois_pontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/dois_pontos"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_lembrete" />

    <TextView
        android:id="@+id/text_minutos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/minutos"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_dois_pontos"
        app:layout_constraintTop_toBottomOf="@+id/bt_alarme" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>